# FERIO-LINUX-HELPER

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
src/: commands.rs  main.rs  privilege.rs
src/modules/: desktop_fixes.rs  log_viewer.rs  mod.rs  network.rs  optimizations.rs  package_manager.rs  system_info.rs  systemd.rs
src/tui/: app.rs  mod.rs  widgets.rs
